# Ignite

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  GenerateProjects.bat  README.md  clean.bat  premake5.lua
Ignite-Core/: premake5.lua
Ignite-Core/include/: igpch.h
Ignite-Core/include/Ignite/: Application.h  Core.h  CreateProperties.h  IGraphicsContext.h  IRenderer.h  IRendererAPI.h  IWindow.h  Ignite.h  Input.h  KeyCodes.h  Layer.h  Log.h  Renderer.h  ResourceFactory.h  SceneGraph.h  SceneObject.h  Transform.h  UUID.h  Utils.h
Ignite-Core/src/Ignite/: Application.cpp  IGraphicsContext.cpp  IPipeline.cpp  IRendererAPI.cpp  IWindow.cpp  Ignite.cpp  Layer.cpp  Log.cpp  RenderCommand.cpp  Renderer.cpp  SceneGraph.cpp  SceneObject.cpp  Transform.cpp  UUID.cpp  Utils.cpp
Ignite-Sandbox/: premake5.lua
Ignite-Sandbox/include/: SponzaTestLayer.h  TangentTestLayer.h  TestUILayer.h
Ignite-Sandbox/resources/shaders/: compile.bat  debugNormalFrag.spv  debugNormalGeom.spv  debugNormalVert.spv  frag.spv  normal.frag  normal.vert  normalFrag.spv  normalMapping.frag  normalMapping.vert  normalMappingFrag.spv  normalMappingVert.spv  shader.frag  (+7 more)
Ignite-Sandbox/src/: SponzaTestLayer.cpp  TangentTestLayer.cpp  TangentTestLayer.h  TestUILayer.cpp  main.cpp
IgniteRenderer/: CMakeLists.txt
IgniteRenderer/include/ignite/: Log.h  RendererAPI.h
IgniteRenderer/include/platform/vulkan/: VulkanRenderAPI.h
IgniteRenderer/src/ignite/: Log.cpp  RendererAPI.cpp
IgniteRenderer/src/platform/vulkan/: VulkanRenderAPI.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
(+112 files in other folders)
